# oop_course_3rd_task

./: CMakeLists.txt  Input.cpp  Input.h  Mission.h  ROV.cpp  Visitor.h  main.cpp
includes/: ROV.h
srcs/: Mission.cpp  ROV.cpp  Visitor.cpp
